Discover python, doxygen, and sphinx dependencies.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,29 @@ project(
     LANGUAGES CXX
 )
 
-# Set module search paths.
-set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH}
-                      ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
+# Discover python.
+find_package(Python COMPONENTS Development Interpreter)
+message(STATUS "Found python executable: ${Python_EXECUTABLE}")
+
+# Discover doxygen.
+find_program(DOXYGEN_EXECUTABLE
+    NAMES doxygen
+)
+if (EXISTS ${DOXYGEN_EXECUTABLE})
+	message(STATUS "Found doxygen executable: ${DOXYGEN_EXECUTABLE}")
+else()
+	message(FATAL_ERROR "doxygen executable found.")
+endif()
+
+# Discover sphinx.
+find_program(SPHINX_EXECUTABLE
+    NAMES sphinx-build
+)
+if (EXISTS ${SPHINX_EXECUTABLE})
+	message(STATUS "Found sphinx executable: ${SPHINX_EXECUTABLE}")
+else()
+	message(FATAL_ERROR "sphinx executable not found.")
+endif()
 
 # Add targets.
 add_subdirectory(thirdparty)
