Working breathe project generation.

--- a/docs/sphinx/CMakeLists.txt
+++ b/docs/sphinx/CMakeLists.txt
@@ -1,7 +1,59 @@
+# Set doxygen binary dir directory
+set(DOXYGEN_BINARY_DIR ${CMAKE_BINARY_DIR}/docs/doxygen)
+
 # Configure sphinx conf.py.
-set(SPHINX_OUTPUT_DIR ${CMAKE_BINARY_DIR}/docs/sphinx)
+set(SPHINX_BINARY_DIR ${CMAKE_BINARY_DIR}/docs/sphinx)
 configure_file(
 	conf.py.in
-    ${SPHINX_OUTPUT_DIR}/conf.py
+    ${SPHINX_BINARY_DIR}/conf.py
+)
+
+file(GLOB SPHINX_INPUTS *.rst)
+set(SPHINX_INPUT_TARGETS "")
+foreach(SPHINX_INPUT ${SPHINX_INPUTS})
+    get_filename_component(BASE_NAME ${SPHINX_INPUT} NAME)
+    add_custom_command(
+        OUTPUT ${SPHINX_BINARY_DIR}/${BASE_NAME}
+        MAIN_DEPENDENCY ${SPHINX_INPUT}
+        POST_BUILD
+        COMMAND ${CMAKE_COMMAND}
+        ARGS -E copy ${SPHINX_INPUT} ${SPHINX_BINARY_DIR}/${BASE_NAME}
+    )
+    list(APPEND SPHINX_INPUT_TARGETS ${SPHINX_BINARY_DIR}/${BASE_NAME})
+    message(STATUS ${SPHINX_INPUT})
+endforeach(SPHINX_INPUT)
+
+# Create sphinx command which generates the documentation.
+add_custom_command(
+	OUTPUT
+        ${SPHINX_BINARY_DIR}/build/index.html
+	COMMAND
+        ${SPHINX_EXECUTABLE}
+    ARGS
+        ${SPHINX_BINARY_DIR} ${SPHINX_BINARY_DIR}/build
+	WORKING_DIRECTORY
+		${CMAKE_BINARY_DIR}
+	MAIN_DEPENDENCY
+        ${SPHINX_BINARY_DIR}/conf.py
+	    conf.py.in
+    DEPENDS
+        ${SPHINX_INPUT_TARGETS}
+	COMMENT
+		"Generating sphinx documentation."
+)
+
+# Define a target which depends on the sphinx output.
+# This target is always built.
+add_custom_target(
+	sphinx_docs ALL
+    COMMAND
+	DEPENDS
+        ${SPHINX_BINARY_DIR}/build/index.html
+)
+
+# Install built files.
+install(
+    DIRECTORY ${SPHINX_BINARY_DIR}/build
+    DESTINATION ${CMAKE_INSTALL_PREFIX}/docs
 )
 
