--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -38,6 +38,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install sphinx
+      - name: Install breathe
+        run: |
+          python -m pip install --upgrade pip
+          pip install breathe
       - uses: actions/checkout@v2
       - name: Create build directories
         run: |
