Autodoc python Vec3f class.

--- a/docs/sphinx/CMakeLists.txt
+++ b/docs/sphinx/CMakeLists.txt
@@ -28,9 +28,8 @@ add_custom_command(
 	OUTPUT
         ${SPHINX_BINARY_DIR}/build/index.html
 	COMMAND
-        ${SPHINX_EXECUTABLE}
-    ARGS
-        ${SPHINX_BINARY_DIR} ${SPHINX_BINARY_DIR}/build
+        ${CMAKE_COMMAND} -E env "PYTHONPATH=${PROJECT_BINARY_DIR}/pylib:$ENV{PYTHONPATH}"
+        ${SPHINX_EXECUTABLE} ${SPHINX_BINARY_DIR} ${SPHINX_BINARY_DIR}/build
 	WORKING_DIRECTORY
 		${CMAKE_BINARY_DIR}
 	MAIN_DEPENDENCY
