--- a/docs/sphinx/conf.py.in
+++ b/docs/sphinx/conf.py.in
@@ -27,7 +27,8 @@ author = 'rlei'
 # extensions coming with Sphinx (named 'sphinx.ext.*') or your custom
 # ones.
 extensions = [
-    "breathe"
+    "breathe",
+    "sphinx.ext.autodoc",
 ]
 
 breathe_projects = {
