--- a/docs/CMakeLists.txt
+++ b/docs/CMakeLists.txt
@@ -1,3 +1,7 @@
+# Set doxygen intermediate directory.
+# This is shared by both the doxygen and sphinx build logic.
+set(DOXYGEN_BINARY_DIR ${CMAKE_BINARY_DIR}/docs/doxygen)
+
 # Recurse subdirectories.
 add_subdirectory(doxygen)
 add_subdirectory(sphinx)
