--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,14 +34,14 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Upgrade pip
+        run: python -m pip install --upgrade pip
       - name: Install Sphinx
-        run: |
-          python -m pip install --upgrade pip
-          pip install sphinx
+        run: pip install sphinx
       - name: Install breathe
-        run: |
-          python -m pip install --upgrade pip
-          pip install breathe
+        run: pip install breathe
+      - name: Install sphinx-tabs
+        run: pip install sphinx-tabs
       - uses: actions/checkout@v2
       - name: Create build directories
         run: |
