--- a/docs/sphinx/conf.py.in
+++ b/docs/sphinx/conf.py.in
@@ -29,6 +29,7 @@ author = 'rlei'
 extensions = [
     "breathe",
     "sphinx.ext.autodoc",
+    "sphinx.ext.doctest",
     "sphinx_tabs.tabs",
 ]
 
