--- a/docs/sphinx/conf.py.in
+++ b/docs/sphinx/conf.py.in
@@ -31,6 +31,7 @@ extensions = [
     "sphinx.ext.autodoc",
     "sphinx.ext.doctest",
     "sphinx_tabs.tabs",
+    "sphinx_rtd_theme",
 ]
 
 breathe_projects = {
@@ -39,23 +40,13 @@ breathe_projects = {
 
 breathe_default_project = "@CMAKE_PROJECT_NAME@"
 
-# Add any paths that contain templates here, relative to this directory.
-# templates_path = ['_templates']
-
 # List of patterns, relative to source directory, that match files and
 # directories to ignore when looking for source files.
 # This pattern also affects html_static_path and html_extra_path.
 exclude_patterns = []
 
-
 # -- Options for HTML output -------------------------------------------------
 
 # The theme to use for HTML and HTML Help pages.  See the documentation for
 # a list of builtin themes.
-#
-html_theme = 'classic'
-
-# Add any paths that contain custom static files (such as style sheets) here,
-# relative to this directory. They are copied after the builtin static files,
-# so a file named "default.css" will overwrite the builtin "default.css".
-# html_static_path = ['_static']
+html_theme = 'sphinx_rtd_theme'
